# greenwashing_detective_project

./: .env.example  .gitignore  2330_台積電_2024年永續報告書_sasb_score_ALL.json  README.md  SQL_table.txt  SQL_table_test.txt  app.py  app_llm_rich_test.py  calculate_esg.py  config.py  crawler_esgReport.py  db_service.py  db_service_local.py  gemini_api.py  moenv_listed_companies_penalty_EMS_P_46.json  moenv_penalty_data.json  pplx_api.py  pyproject.toml  requirements.txt  run_prompt2_gemini.py  run_prompt2_gemini_fix.py  transform_sasb_weight.py
app/: calculate_esg.py
change/: 2026-01-16_json_key_changes.md  整合規劃書.md
change/t1/: README.md  code_structure.md  dependency_analysis.md  usage_examples.md
change/t2/: README.md  code_structure.md  usage_examples.md
change/t3/: README.md  code_structure.md  issues.md  usage_examples.md
change/t4/: README.md  code_structure.md  usage_examples.md
change/t5/: README.md  code_structure.md  usage_examples.md
change/t6/: README.md  code_structure.md  usage_examples.md
crawler_footprint/: crawler_footprint.py
data/: 1229亞泥P2_test1.json  msci_flag.json
db/: schema.sql  seed.sql
moenv_search/: moenv_search.py  moenv_search_EMS_P_46.py  moenv_search_useless.py  tw_stock.py
news_search/: crawler_news.py  news_search.py  news_search_p1keyword.py  sasb_keyword.json
news_search/news_output/: 2024_1102_news.json  news_results_20260110_sasbtopic.json  (+3 more)
pplx_api/: config.py  esg_news_system.json
src/: calculate_esg.py  crawler_esgReport.py  crawler_news.py  gemini_api.py  pplx_api.py  run_prompt2_gemini.py  word_cloud.py
static/css/: style.css
temp_data/: result_2330_2024.json
templates/: greenwashing_dashboard.html  index.html
word_cloud/: fuzzy_dict.txt  word_cloud.py
(+21 files in other folders)
